<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_my">
    <TextView
        android:id="@+id/result_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:hint="@string/result_message" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:columnCount="4"
        android:rowCount="4">
        <Button
            android:text="@string/button_7"
            android:onClick="button7"/>
        <Button
            android:text="@string/button_8"
            android:onClick="button8"/>
        <Button
            android:text="@string/button_9"
            android:onClick="button9"/>
        <Button
            android:text="@string/button_division"
            android:onClick="buttonDivision"/>
        <Button
            android:text="@string/button_4"
            android:onClick="button4"/>
        <Button
            android:text="@string/button_5"
            android:onClick="button5"/>
        <Button
            android:text="@string/button_6"
            android:onClick="button6"/>
        <Button
            android:text="@string/button_multi"
            android:onClick="buttonMulti"/>
        <Button
            android:text="@string/button_1"
            android:onClick="button1"/>
        <Button
            android:text="@string/button_2"
            android:onClick="button2"/>
        <Button
            android:text="@string/button_3"
            android:onClick="button3"/>
        <Button
            android:text="@string/button_sub"
            android:onClick="buttonSub"/>
        <Button
            android:text="@string/button_0"
            android:onClick="button0"/>
        <Button
            android:text="@string/button_addition"
            android:onClick="buttonAddition"/>
        <Button
            android:text="@string/button_equation"
            android:onClick="buttonEquation"/>
        <Button
            android:text="@string/button_dot"
            android:onClick="buttonDot"/>
    </GridLayout>

</LinearLayout>
